Complete MongoDB migration and backend overhaul
- Migrated from SQLAlchemy to MongoDB with Beanie ODM
- Updated all API endpoints for MongoDB compatibility
- Implemented comprehensive CRUD operations
- Added professional error logging and monitoring
- Updated all schemas and models for MongoDB
- Removed deprecated SQLAlchemy code and databases
- Enhanced security and authentication system
- Improved API response formats and error handling
- Added new analytics and reporting features
- Full backend modernization and optimization

--- a/env.example
+++ b/env.example
@@ -2,8 +2,8 @@
 # For local development (SQLite - no setup required)
 DATABASE_URL=sqlite:///./washlink.db
 
-# For production (MySQL)
-# DATABASE_URL=mysql+pymysql://username:password@localhost:3306/washlink_db
+# MongoDB URL (for production)
+MONGODB_URL=mongodb://localhost:27017
 
 # JWT Settings
 SECRET_KEY=your-secret-key-change-in-production-123456789
